--- a/tasks/setup-vsftpd.yml
+++ b/tasks/setup-vsftpd.yml
@@ -10,7 +10,7 @@
   register: vsftpd_conf_templating
 
 - name: Allow FTP through the firewall
-  ansible.builtin.firewalld:
+  ansible.posix.firewalld:
     service: ftp
     permanent: yes
     state: enabled
