--- a/tasks/setup-tftpd.yml
+++ b/tasks/setup-tftpd.yml
@@ -33,6 +33,11 @@
   loop_control:
     loop_var: seb_item
 
+- name: Make the tftp base directory
+  ansible.builtin.file:
+    state: directory
+    path: "{{ tftp_server_base_path }}"
+
 - name: Enable and Start TFTP
   ansible.builtin.service:
     name: tftp.service
